--- a/debian/rules
+++ b/debian/rules
@@ -1,18 +1,11 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
+export DH_VERBOSE = 1
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+%:
+	dh $@ --parallel --buildsystem=cmake
 
-#%:
-#	dh $@ 
+override_dh_auto_configure:
+	dh_auto_configure -- \
+		-DSHARED_LIBS=true \
+		-DDOC_INSTALL_TARGET="share/doc/libnabo-doc/api"
 
-DEB_CMAKE_EXTRA_FLAGS=-DSHARED_LIBS=true -DDOC_INSTALL_TARGET="share/doc/libnabo-doc/api" -DPYTHON_DEB_INSTALL_TARGET=true
-
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/cmake.mk
